# AI-code-review

./: .env.example  .gitignore  .railway-trigger  .secrets.json  AI_CODE_REVIEW_IMPLEMENTATION.md  AUTOREV_COMPLETE.md  CLAUDE.md  DEPLOYMENT_STATUS.md  DOMAIN_ROUTING_FIX.md  Dockerfile  FUTURE_FEATURES.md  INTEGRATION_COMPLETE.md  PHASE7_COMPLETE.md  PHASE7_PROGRESS.md  PHASE7_SUMMARY.md  PYTHON_BACKEND_HOSTING_COMPARISON.md  QUICK_START_TESTING.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_DEPLOYMENT_SUCCESS.md  RAILWAY_FIX_UVICORN_ERROR.md  RAILWAY_MANUAL_DEPLOYMENT.md  RAILWAY_MANUAL_DEPLOY_STEPS.md  RAILWAY_NIXPACKS_DEPLOY.md  RAILWAY_TROUBLESHOOTING.md  RAILWAY_WORKING_VERSION.md  README.md  REQUIREMENTS.md  TODO.md  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  requirements.txt  start.sh  test_ai_integration.py
config/: bandit.yaml  engine.yaml  flake8.cfg  include_exclude.yaml  smart_filters.yaml
enhanced-test/: 000_manifest.json
phase1-output/: 000_manifest.json
site/: .env.example  .env.local.template  .gitignore  Add-GitHubOAuth-Env.ps1  Add-VercelEnv.ps1  DEPLOYMENT.md  Deploy-Vercel.ps1  ENHANCING_UI.md  GITHUB_INTEGRATION_STRATEGY.md  GITHUB_OAUTH_PERMISSIONS.md  QUICKSTART.md  README.md  UI_ENHANCED_SUMMARY.md  VERCEL_ENV_SETUP.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
src/: cli.py
tests/: conftest.py  test_ai_apply.py  test_ai_providers.py  test_analyze_static.py  test_cli.py  test_consolidate.py  test_consolidate_config.py  test_diffscan.py  test_discover.py  test_integration.py  test_scoring.py  (+5 more)
(+39 files in other folders)
